Index css change button style, casemakerformtsx change into selected for selectid, questionform passing casemakename,

--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #a70000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #7578af;
 }
 button:focus,
 button:focus-visible {
@@ -63,6 +63,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #d9d9d9;
   }
 }
