--- a/src/style/SubjectDuration.css
+++ b/src/style/SubjectDuration.css
@@ -2,9 +2,32 @@ form {
   display: flex;
   flex-direction: column;
   align-items: start;
-  font-size: 40px;
+  background-color: #fafafa;
+  padding: 10px;
 }
 select,
 input {
-  font-size: 40px;
+  font-size: 20px;
+  font-weight: 200;
+  margin-bottom: 40px;
+  width: 90%;
+  border-radius: 30px;
+  background-color: #d9d9d9;
+  border-color: transparent;
+}
+label,
+option {
+  font-size: 20px;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 30px;
+}
+
+button {
+  align-self: flex-end;
+  border-radius: 30px;
+  width: 120px;
+  height: 40px;
 }
