--- a/src/style/ReviewForm.css
+++ b/src/style/ReviewForm.css
@@ -1,3 +1,55 @@
 form {
-  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fafafa;
+  padding: 30px;
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.review-div {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.review-div p {
+  align-self: start;
+  font-size: 20px;
+}
+
+textarea {
+  display: block;
+  width: 98%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+select {
+  font-size: 20px;
+  font-weight: 200;
+  margin-bottom: 40px;
+  width: 90%;
+  border-radius: 30px;
+  background-color: #d9d9d9;
+  border-color: transparent;
+}
+
+label,
+option {
+  font-size: 20px;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 30px;
+}
+
+button {
+  align-self: flex-end;
+  border-radius: 30px;
+  width: 120px;
+  height: 40px;
 }
