--- a/src/style/SubjectCaseMakeForm.css
+++ b/src/style/SubjectCaseMakeForm.css
@@ -1,9 +1,12 @@
+div {
+  padding: 20px;
+}
 form {
   display: flex;
   flex-direction: column;
   align-items: start;
   background-color: #fafafa;
-  padding: 10px;
+  padding: 100px;
 }
 select,
 input {
